feat(dm): add DM events section and creation flow -Add persisted DM events with create/delete support and expose them under the DM area alongside DM notes. -Also move monster lookups off /api to avoid backend route collisions and keep production builds working with suspense-wrapped search param pages.